--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "echarts": "^5.6.0",
     "framer-motion": "^12.17.0",
